[gd_scene load_steps=21 format=3 uid="uid://kp5f2qqovi7l"]

[ext_resource type="PackedScene" uid="uid://dbccquxi8vu55" path="res://actors/player.tscn" id="1_8npqi"]
[ext_resource type="Script" path="res://scenes/world.gd" id="1_jco67"]
[ext_resource type="PackedScene" uid="uid://yttx6x2muh7" path="res://scenes/protoype_level.tscn" id="1_nhriu"]
[ext_resource type="Script" path="res://scenes/EnemyHandler.gd" id="2_36b4q"]
[ext_resource type="AudioStream" uid="uid://durg4m63bsg5d" path="res://assets/music/Circuit_Breaker_180bpm_60s_B.wav" id="2_nlhsj"]
[ext_resource type="PackedScene" uid="uid://cboxnaifgnlaq" path="res://actors/enemy.tscn" id="3_eqkca"]
[ext_resource type="PackedScene" uid="uid://b6w3kovov0il8" path="res://scenes/pause_menu.tscn" id="4_bgq4j"]
[ext_resource type="Script" path="res://src/EnemyWave.gd" id="5_1pkxs"]
[ext_resource type="PackedScene" uid="uid://d34l538i1vkw7" path="res://scenes/game_over.tscn" id="6_2eems"]
[ext_resource type="Script" path="res://scenes/TimeDisplay.gd" id="8_svexg"]

[sub_resource type="Resource" id="Resource_l75l7"]
script = ExtResource("5_1pkxs")
time_code = 1.0
enemy = ExtResource("3_eqkca")
amount = 3

[sub_resource type="Resource" id="Resource_n15j8"]
script = ExtResource("5_1pkxs")
time_code = 2.0
enemy = ExtResource("3_eqkca")
amount = 4

[sub_resource type="Resource" id="Resource_beiv3"]
script = ExtResource("5_1pkxs")
time_code = 5.0
enemy = ExtResource("3_eqkca")
amount = 10

[sub_resource type="Resource" id="Resource_5abe2"]
script = ExtResource("5_1pkxs")
time_code = 10.0
enemy = ExtResource("3_eqkca")
amount = 10

[sub_resource type="Resource" id="Resource_0guua"]
script = ExtResource("5_1pkxs")
time_code = 15.0
enemy = ExtResource("3_eqkca")
amount = 10

[sub_resource type="Resource" id="Resource_q43iq"]
script = ExtResource("5_1pkxs")
time_code = 20.0
enemy = ExtResource("3_eqkca")
amount = 10

[sub_resource type="Resource" id="Resource_h476i"]
script = ExtResource("5_1pkxs")
time_code = 30.0
enemy = ExtResource("3_eqkca")
amount = 10

[sub_resource type="Resource" id="Resource_xsq3c"]
script = ExtResource("5_1pkxs")
time_code = 40.0
enemy = ExtResource("3_eqkca")
amount = 10

[sub_resource type="Resource" id="Resource_tdicv"]
script = ExtResource("5_1pkxs")
time_code = 50.0
enemy = ExtResource("3_eqkca")
amount = 10

[sub_resource type="Resource" id="Resource_yd0yx"]
script = ExtResource("5_1pkxs")
time_code = 60.0
enemy = ExtResource("3_eqkca")
amount = 10

[node name="World" type="Node2D"]
script = ExtResource("1_jco67")
audio_track = ExtResource("2_nlhsj")

[node name="EnemyHandler" type="Node2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(0, 1)
script = ExtResource("2_36b4q")
player = NodePath("../Player")
enemy_waves = [SubResource("Resource_l75l7"), SubResource("Resource_n15j8"), SubResource("Resource_beiv3"), SubResource("Resource_5abe2"), SubResource("Resource_0guua"), SubResource("Resource_q43iq"), SubResource("Resource_h476i"), SubResource("Resource_xsq3c"), SubResource("Resource_tdicv"), SubResource("Resource_yd0yx")]

[node name="Background" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="ProtoypeLevel" parent="Background" instance=ExtResource("1_nhriu")]
metadata/_edit_lock_ = true

[node name="ProtoypeLevel2" parent="Background" instance=ExtResource("1_nhriu")]
position = Vector2(2048, 0)
metadata/_edit_lock_ = true

[node name="ProtoypeLevel3" parent="Background" instance=ExtResource("1_nhriu")]
position = Vector2(-2048, 0)
metadata/_edit_lock_ = true

[node name="ProtoypeLevel4" parent="Background" instance=ExtResource("1_nhriu")]
position = Vector2(0, -2048)
metadata/_edit_lock_ = true

[node name="ProtoypeLevel5" parent="Background" instance=ExtResource("1_nhriu")]
position = Vector2(2048, -2048)
metadata/_edit_lock_ = true

[node name="ProtoypeLevel6" parent="Background" instance=ExtResource("1_nhriu")]
position = Vector2(-2048, -2048)
metadata/_edit_lock_ = true

[node name="ProtoypeLevel7" parent="Background" instance=ExtResource("1_nhriu")]
position = Vector2(0, 2048)
metadata/_edit_lock_ = true

[node name="ProtoypeLevel8" parent="Background" instance=ExtResource("1_nhriu")]
position = Vector2(2048, 2048)
metadata/_edit_lock_ = true

[node name="ProtoypeLevel9" parent="Background" instance=ExtResource("1_nhriu")]
position = Vector2(-2048, 2048)
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("1_8npqi")]

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="PauseMenu" parent="Player/Camera2D" instance=ExtResource("4_bgq4j")]
offset_left = -543.0
offset_top = -460.0
offset_right = -543.0
offset_bottom = -460.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GameOver" parent="HUD" instance=ExtResource("6_2eems")]
process_mode = 3
visible = false

[node name="TimeDisplay" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 55.0
offset_right = 114.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Timecode here"
horizontal_alignment = 1
script = ExtResource("8_svexg")

[connection signal="time_update" from="EnemyHandler" to="HUD/TimeDisplay" method="_on_enemy_handler_time_update"]
[connection signal="victory" from="EnemyHandler" to="." method="_on_enemy_handler_victory"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="unpaused" from="Player/Camera2D/PauseMenu" to="." method="_on_pause_menu_unpaused"]
